--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 ---
 # Program/Department Title
-title: Nuclear Energy
+title: Creative Writing
 # Site URL (without /)
 url: ""
 # Subdirectory (with / at only at beginning)
