Added email and phone number

--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,11 @@ keywords: highered, college, university, philadelphia, Temple
 # Address
 address:
   building: Anderson Hall
-  room: 10th Floor
+  room: 10th Floor, Room 1020
   street: 1114 Polett Walk
   city: Phialdelphia, PA 19122
+  email: creative-writing@temple.edu
+  phone: 2152041796
 
 # Social Media
 # Put in only the username unless otherwise noted
