[batch] Add Jekyll ignores for local bundles

--- a/_config.yml
+++ b/_config.yml
@@ -107,6 +107,7 @@ prose:
             - name: home
               value: home
 
+# Jekyll Ignore
 exclude:
   - Gemfile
   - Gemfile.lock
@@ -117,3 +118,6 @@ exclude:
   - .travis.yml
   - .ruby-version
   - .gitignore
+  - vendor
+  - _site
+  - node_modules
