--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
 ---
 # Program/Department Title
-title: Creative Writing
-# Site URL (without /)
-url: ""
+title: Creative WritingUA-69082166-1
 # Subdirectory (with / at only at beginning)
 baseurl: /creative-writing
 
