[batch] Remove Google Analytics tag from site title

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 ---
 # Program/Department Title
-title: Creative WritingUA-69082166-1
+title: Creative Writing
 # Subdirectory (with / at only at beginning)
 baseurl: /creative-writing
 
