--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -44,13 +44,7 @@
   photo: "https://randomuser.me/api/portraits/men/12.jpg"
   expertise: "Creative Writing, Poetry, 20th-21st century American Poetry & Poetics"
   bio: >
-    A 2006 Pew Fellow in the Arts, Jena Osman has also received grants for her poetry from the National Endowment for the Arts, the New York Foundation for the Arts, The Pennsylvania Council on the Arts, the Howard Foundation, and the Fund for Poetry.
-
-
-    Osman has been a writing fellow at the MacDowell Colony, the Blue Mountain Center, the Djerassi Foundation, and Chateau de la Napoule. She founded and co-edited the award-winning and internationally recognized literary magazine Chain with Juliana Spahr for twelve years; Osman and Spahr now edit the ChainLinks Book series together. 
-
-
-    Osman received an M.A. in poetry and playwriting from Brown University, and a Ph.D. in English from the Poetics Program at the State University of New York at Buffalo.
+    A 2006 Pew Fellow in the Arts, Jena Osman has also received grants for her poetry from the National Endowment for the Arts, the New York Foundation for the Arts, The Pennsylvania Council on the Arts, the Howard Foundation, and the Fund for Poetry. Osman has been a writing fellow at the MacDowell Colony, the Blue Mountain Center, the Djerassi Foundation, and Chateau de la Napoule. She founded and co-edited the award-winning and internationally recognized literary magazine Chain with Juliana Spahr for twelve years; Osman and Spahr now edit the ChainLinks Book series together. Osman received an M.A. in poetry and playwriting from Brown University, and a Ph.D. in English from the Poetics Program at the State University of New York at Buffalo.
 
 - name: "Alan Singer"
   title: <i>Professor</i>
