--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ address:
   building: Anderson Hall
   room: 10th Floor, Room 1020
   street: 1114 Polett Walk
-  city: Phialdelphia, PA 19122
+  city: Philadelphia, PA 19122
   email: creative-writing@temple.edu
   phone: 2152041796
 
