removed email code

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ address:
   room: 10th Floor, Room 1020
   street: 1114 Polett Walk
   city: Philadelphia, PA 19122
-  email: <a href="mailto:creative-writing@temple.edu">creative-writing@temple.edu</a>
+  email: creative-writing@temple.edu
   phone: 215-204-1796
 
 # Social Media
