--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -4,6 +4,8 @@
   url: /graduate/
 - text: Faculty
   url: /faculty/
+- text: Writer-in-Residence
+  url: /Writer-in-Residence/
 - text: Resources
   url : /resources/
 - text: Next Stops
