--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -2,6 +2,8 @@
   url: /undergraduate/
 - text: Graduate
   url: /graduate/
+- text: Poets & Writers Series
+  url: /poets-and-writers/
 - text: Faculty
   url: /faculty/
 - text: Resources
