--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ keywords: highered, college, university, philadelphia, Temple
 # Address
 address:
   building: Anderson Hall
-  room: 10th Floor, Room 1020
+  room: 1020
   street: 1114 Polett Walk
   city: Philadelphia, PA 19122
   email: creative-writing@temple.edu
