--- a/_config.yml
+++ b/_config.yml
@@ -57,6 +57,9 @@ university:
 college:
   name: College of Liberal Arts
   url: https://liberalarts.temple.edu/
+program_news: https://liberalarts.temple.edu/news/creative-writing
+program_events: https://events.temple.edu/department/creative-writing 
+
 
 # Google Tag Manager OR Google Analytics
 google_analytics:
