--- a/_data/navigation.yaml
+++ b/_data/navigation.yaml
@@ -6,7 +6,7 @@
   url: /poets-and-writers/
 - text: Faculty
   url: /faculty/
-- text: Resources
-  url : /resources/
+- text: Student Life
+  url : /student-life/
 - text: Next Stops
   url : /next-stops/
